[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/icons/back.png" type="Texture" id=1]
[ext_resource path="res://assets/icons/next.png" type="Texture" id=2]
[ext_resource path="res://assets/background.png" type="Texture" id=3]
[ext_resource path="res://page/help/trainHelp.gd" type="Script" id=4]
[ext_resource path="res://assets/theme/PhoneticTheme.tres" type="Theme" id=5]
[ext_resource path="res://art/imgBorel/ai.png" type="Texture" id=6]
[ext_resource path="res://assets/theme/backgroundPanel.tres" type="StyleBox" id=7]
[ext_resource path="res://assets/icons/speaker.png" type="Texture" id=8]
[ext_resource path="res://assets/icons/check.png" type="Texture" id=9]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackGround" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.588235 )
anchor_left = 0.140176
anchor_top = 0.0703155
anchor_right = 0.437051
anchor_bottom = 0.751982
custom_styles/panel = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BorelLeft" type="TextureRect" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValidateLeft" type="TextureRect" parent="Panel"]
anchor_left = -0.196783
anchor_top = 0.0421217
anchor_right = 0.197954
anchor_bottom = 0.298845
rect_pivot_offset = Vector2( 172.853, 78.1277 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel2" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.588235 )
anchor_left = 0.564771
anchor_top = 0.0705246
anchor_right = 0.861646
anchor_bottom = 0.752191
custom_styles/panel = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BorelRight" type="TextureRect" parent="Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValidateRight" type="TextureRect" parent="Panel2"]
anchor_left = -0.148865
anchor_top = 0.0298076
anchor_right = 0.245872
anchor_bottom = 0.286531
margin_left = -3.8147e-06
rect_pivot_offset = Vector2( 172.853, 78.1277 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LastOne" type="TextureButton" parent="."]
anchor_left = 0.015903
anchor_top = 0.451877
anchor_right = 0.113559
anchor_bottom = 0.618544
size_flags_vertical = 0
theme = ExtResource( 5 )
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Back" type="TextureButton" parent="."]
anchor_left = 0.0155997
anchor_top = 0.0131884
anchor_right = 0.0986075
anchor_bottom = 0.154855
theme = ExtResource( 5 )
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NextOne" type="TextureButton" parent="."]
anchor_left = 0.889441
anchor_top = 0.451611
anchor_right = 0.987098
anchor_bottom = 0.618278
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
theme = ExtResource( 5 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MarginNext" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -101.0
margin_top = -300.0
margin_bottom = -200.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ListenAudio" type="VideoPlayer" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Listen" type="TextureButton" parent="."]
anchor_left = 0.452328
anchor_top = 0.772928
anchor_right = 0.549984
anchor_bottom = 0.939595
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="Panel" to="." method="_on_Panel_gui_input"]
[connection signal="gui_input" from="Panel2" to="." method="_on_Panel2_gui_input"]
[connection signal="pressed" from="LastOne" to="." method="_on_LastOne_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="NextOne" to="." method="_on_NextOne_pressed"]
[connection signal="pressed" from="Listen" to="." method="_on_Listen_pressed"]
